--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.mikhaellopez:circularimageview:4.1.1'
+
 
 }
